# house_P_P_end

./: .gitignore  app.py  price_model.sav  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
src/model/: model.py  price_model.sav
templates/: form.html  index.html  result.html
