[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires = 
    pandas
    numpy
    matplotlib

[options.extras_require]
testing =
    pytest

[options.package_data]
MongoDB_Connect = py.typed
